# libaac

./: .gitignore  ADAPT.md  CMakeLists.txt  Dockerfile  LICENSE  ffmpeg-git-s16only.patch  ffmpeg-git.patch  libaac-config.cmake
patch/: libxaac.patch
source/: CMakeLists.txt
source/examples/: CMakeLists.txt
source/examples/aacdec/: CMakeLists.txt  aacdec.cpp
source/examples/aacenc/: CMakeLists.txt  aacenc.cpp
source/examples/shared/: audiofile.h
source/libaac/: CMakeLists.txt  pkg-config.pc.in
source/libaac/include/aacnext/: libaac.h
source/libaac/source/: libaac.c
source/tests/: CMakeLists.txt
source/tests/libaac/: libaactest.c
